manual control of slide size to avoid overflows

--- a/znai-reactjs/src/doc-elements/presentation/Presentation.css
+++ b/znai-reactjs/src/doc-elements/presentation/Presentation.css
@@ -99,10 +99,8 @@
     border: none;
 }
 
-.presentation .slide-area.full-screen {
+.znai-presentation-slides-area {
     flex: 1;
-    justify-content: flex-start;
-    align-items: stretch;
 }
 
 .presentation .content-block {
